Restructured files for included header; Window init in C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 cmake_minimum_required(VERSION 3.23)
 
+if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
+    message(FATAL_ERROR "
+    Please don't run CMake in the source folder.
+
+    Delete 'CMakeCache.txt' if it was created,
+    then run CMake in a separate 'build' folder.
+
+    If you're in the build folder and still see this,
+    delete any 'CMakeCache.txt' files outside the build folder.
+    ")
+endif()
+
 project(SilverOctoWaddle)
 
 set(CMAKE_CXX_STANDARD 17)
